# cypher

./: .gitignore  Makefile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  notarization-placeholder.yml  release-macos.yml
data/audio/: example.json
packaging/macos/: README.md  cypher.spec
src/cypher/: __init__.py  audio.py  audio_decoder.py  audio_encoder.py  benchmark.py  bundle.py  checksum.py  cli.py  config.py  container.py  crypto.py  file_reader.py  file_writer.py  gui.py  header.py  image_reader.py  image_writer.py  inspect.py  keys.py  main.py  mapping.py  signatures.py  transport.py
tests/: conftest.py  test_audio_io.py  test_benchmark_and_parser.py  test_bundle_commands.py  test_bundle_container.py  test_cli_parser.py  test_commands_roundtrip.py  test_container_audio.py  test_core_codec.py  test_crypto_edges.py  test_decode_edges.py  test_gui.py  test_gui_100_edges.py  test_gui_final_coverage.py  test_gui_last_edges.py  test_gui_more.py  test_integrity_signatures_v1_3.py  test_key_management.py  test_keychain_and_touchid.py  test_main_100_edges.py  test_main_entrypoint.py  test_main_final_coverage.py  test_main_last_edges.py  test_multi_recipient_crypto.py  test_remaining_main_coverage.py  test_resilience_transport_v1_4.py  test_resolvers_and_io.py  test_restore_safety.py  test_security_ux_v1_2.py  test_single_recipient_crypto.py  test_v1_1_coverage_98.py  test_v1_1_coverage_boost.py  test_v1_1_coverage_more.py  test_validation_edges.py
